[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/angelica/fonts/new_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://addons/angelica/Brain/Chat.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Brain/Print.gd" type="Script" id=4]
[ext_resource path="res://addons/angelica/fonts/bottom.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/angelica/fonts/open_sans_yellow.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/angelica/fonts/OpenSans-SemiboldItalic.ttf" type="DynamicFontData" id=9]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.176471, 0.176471, 0.176471, 0.941176 )
border_width_left = 4
border_width_top = 26
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.603922, 0.482353, 0.576471, 0.294118 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 11

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.729412, 0.317647, 0.878431, 0.027451 )
border_width_left = 10
border_width_top = 2
border_width_right = 12
border_width_bottom = 2
border_color = Color( 0.603922, 0.286275, 0.670588, 0.0745098 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 20

[sub_resource type="Theme" id=4]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_right = 2.0

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_right = 2.0

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 17
outline_size = 2
outline_color = Color( 0.270588, 0.184314, 0.290196, 0.72549 )
font_data = ExtResource( 1 )

[node name="Chat" type="Node2D"]
script = ExtResource( 3 )

[node name="Skin" type="Panel" parent="."]
pause_mode = 2
margin_left = 3.0
margin_top = -3.0
margin_right = 627.0
margin_bottom = 305.0
mouse_filter = 1
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 54.9494
margin_top = -3.0
margin_right = 689.949
margin_bottom = 28.0
size_flags_horizontal = 5
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "Angelica Ver. Alfa 140"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 450.0
margin_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.784314, 0.501961, 0.823529, 1 )
bbcode_enabled = true
tab_size = 7
scroll_following = true
selection_enabled = true
override_selected_font_color = true
custom_effects = [ null, null, null, null, null ]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="RichTextLabel" parent="."]
margin_left = 459.0
margin_top = 144.0
margin_right = 619.0
margin_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0.784314, 0.501961, 0.823529, 1 )
bbcode_enabled = true
tab_size = 7
scroll_following = true
selection_enabled = true
override_selected_font_color = true
custom_effects = [ null, null, null, null, null ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alt" type="Label" parent="."]
visible = false
margin_left = 19.8351
margin_top = -56.4092
margin_right = 96.8351
margin_bottom = -17.4092
size_flags_horizontal = 5
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "link to"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 8 )]

[connection signal="meta_hover_ended" from="Interface" to="Interface" method="_on_Interface_meta_hover_ended"]
[connection signal="meta_hover_started" from="Interface" to="Interface" method="_on_Interface_meta_hover_started"]
[connection signal="meta_hover_ended" from="Note" to="Interface" method="_on_Interface2_meta_hover_ended"]
